# brazilian-ids

./: .bumpversion.toml  .readthedocs.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/source/: usage.rst
src/brazilian_ids/: util.py
src/brazilian_ids/functions/: exceptions.py  util.py
src/brazilian_ids/functions/company/: cnpj.py
src/brazilian_ids/functions/labor_dispute/: nupj.py
src/brazilian_ids/functions/location/: cep.py  extended_cep.py  municipio.py  states.py
src/brazilian_ids/functions/person/: cpf.py  pis_pasep.py
src/brazilian_ids/functions/real_state/: cno.py  sql.py
src/brazilian_ids/location/: cep.py
src/brazilian_ids/person/: cpf.py
tests/: test_cep.py  test_cno.py  test_cno_exceptions.py  test_cnpj_exceptions.py  test_cpf_exceptions.py  test_cpf_functions.py  test_extended_cep.py  test_municipio.py  test_municipio_exceptions.py  test_nupj.py  test_nupj_exceptions.py  test_pis_pasep_exceptions.py  test_sql_exceptions.py
