[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brazilian_ids"
version = "0.1.0"
authors = [
    { name = "Alceu Rodrigues de Freitas Junior", email = "glasswalk3r@yahoo.com.br" },
]
license = { file = "LICENSE" }
description = "provides functions and classes to validate several Brazilian IDs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]

keywords = ["brazil", "brasil", "cnpj", "cei", "cpf", "pis", "pasep", "cep"]

dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/brazilian_ids"]

[project.urls]
Homepage = "https://github.com/glasswalk3r/brazilian-ids"
Repository = "https://github.com/glasswalk3r/brazilian-ids.git"
Issues = "https://github.com/glasswalk3r/brazilian-ids/issues"

[tool.setuptools.package-data]
"brazilian_ids" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "6.0"

pythonpath = ["src"]
testpaths = ["tests"]
